fixes mobile overflow for workout preview list

--- a/src/components/MainView/MainView.css
+++ b/src/components/MainView/MainView.css
@@ -39,6 +39,7 @@
   color: #26282b;
   justify-content: space-between;
   width: 93%;
+  overflow: auto;
 }
 
 .workout-preview-title-container{
@@ -112,7 +113,7 @@
 .add-button {
   margin: 0;
   padding: 0;
-  margin: 1.2rem 0.5rem 0 0;
+  margin: 0.5rem 0.5rem 0 0;
   border: 0;
   height: fit-content;
   background-color: transparent;
